TFP-6103 redaksjonell - typer i beh.kontrollkontekst